--- a/btre/static/css/style.css
+++ b/btre/static/css/style.css
@@ -16,9 +16,8 @@ img {
 
 #showcase {
   /* background: url('../img/showcase.jpg') no-repeat top center fixed/cover; */
-  background: url(../img/showcase.jpg) no-repeat top center;
-  background-attachment: fixed;
-  background-size: cover cover;
+  background: url(../img/showcase.jpg) no-repeat top center fixed;
+  background-size: cover;
   position: relative;
   min-height: 650px;
   color: #fff;
@@ -37,7 +36,9 @@ img {
     background: rgba(51, 51, 51, 0.8); }
 
 #services {
-  background: url(../img/building.jpg) no-repeat top center fixed/cover;
+  /* background: url(../img/building.jpg) no-repeat top center fixed/cover; */
+  background: url(../img/building.jpg) no-repeat top center fixed;
+  background-size: cover;
   min-height: 300px;
   position: relative;
   overflow: hidden; }
@@ -51,7 +52,9 @@ img {
     background: rgba(32, 134, 107, 0.8); }
 
 #showcase-inner {
-  background: url(../img/building.jpg) no-repeat top center fixed/cover;
+  /* background: url(../img/building.jpg) no-repeat top center fixed/cover; */
+  background: url(../img/building.jpg) no-repeat top center fixed;
+  background-size: cover;
   position: relative;
   overflow: hidden;
   min-height: 200px; }
