--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,7 +2,12 @@
 
 {% load humanize %}
 
+{% block title %} | Welcome{% endblock title %}
+
 {% block content %}
+<!--Alerts-->
+{% include 'partials/_alerts.html' %}
+
 <!-- Showcase -->
 <section id="showcase">
 <div class="container text-center">
@@ -64,6 +69,7 @@
     </div>
 </div>
 </section>
+
 
 <!-- Listings -->
 <section id="listings" class="py-5">
